--- a/style.css
+++ b/style.css
@@ -66,6 +66,7 @@ body {
   }
   .gallery figcaption {
     display: inline-block;
+    border-radius: 0;
     vertical-align: top;
     text-align: center;
     margin-top: 10px;
@@ -73,6 +74,17 @@ body {
     font-weight: bold;
     color: #000000;
     text-decoration: none;
+  }
+  .price-tag {
+    display: block;
+    font-size: 16px;
+    font-weight: bold;
+    color: #fff;
+    background-color: #000;
+    padding: 5px 10px;
+    margin-top: 10px;
+    text-align: center;
+    border-radius: 5px;
   }
 
   footer {
@@ -130,4 +142,6 @@ h1 {
     font-size: larger;
     
   }
+  
+ 
   
