--- a/style.css
+++ b/style.css
@@ -142,6 +142,26 @@ h1 {
     font-size: larger;
     
   }
-  
+  /* CSS for the gallery link */
+.gallery-link {
+  text-align: center;
+  margin-top: 20px;
+}
+
+.gallery-link a {
+  display: inline-block;
+  padding: 10px 20px;
+  background-color: #000;
+  color: #fff;
+  text-decoration: none;
+  font-weight: bold;
+
+}
+
+.gallery-link a:hover {
+  background-color: #fff;
+  color: #000;
+}
+
  
   
