--- a/style.css
+++ b/style.css
@@ -1,167 +1,162 @@
 body {
-    font-family: Arial, sans-serif;
-    background-color: #f9f9f9;
-    margin: 0;
-  }
-  
-  header {
-    background-color: #000000;
-    color: #fff;
-    text-align: center;
-    padding: 0.9px;
-  }
-  .fade-in {
-    opacity: 0;
-    animation-name: fadeIn;
-    animation-duration: 2s;
-    animation-delay: 0.5s;
-    animation-fill-mode: forwards;
-  }
-  
-  @keyframes fadeIn {
-    from {
-      opacity: 0;
-    }
-    to {
-      opacity: 1;
-    }
-  }
-  
-
-  
-  main {
-    padding: 20px;
-  }
-  
-  .gallery {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-gap: 20px;
-  }
-  
-  .gallery figure {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: center;
-    margin: 0;
-  }
-  
-  
-  .gallery img {
-    width: 25%;
-    height: auto;
-  }
-  
-  
-  .gallery figcaption a{
-    display: inline-block;
-    vertical-align: top;
-    text-align: center;
-    margin-top: 10px;
-    width: 100%;
-    font-weight: bold;
-    color: #000000;
-    text-decoration: none;
-  }
-  .gallery figcaption {
-    display: inline-block;
-    border-radius: 0;
-    vertical-align: top;
-    text-align: center;
-    margin-top: 10px;
-    width: 100%;
-    font-weight: bold;
-    color: #000000;
-    text-decoration: none;
-  }
-  .price-tag {
-    display: block;
-    font-size: 16px;
-    font-weight: bold;
-    color: #fff;
-    background-color: #000;
-    padding: 5px 10px;
-    margin-top: 10px;
-    text-align: center;
-    border-radius: 5px;
-  }
-
-  footer {
-    background-color: #000000;
-    color: #fff;
-    text-align: center;
-    padding: 20px;
-    margin-top: 95px;
-  }
-  h1 {
-    font-family: Muller;
-    font-size: 48px;
-    font-weight: bold;
-    color: #333;
-  }
-  @font-face {
-  font-family: 'Muller ExtraBold DEMO';
-  src: 
-       url('C:\Users\hetsu\Desktop\fontsMuller-ExtraBold-DEMO.woff') format('woff');
-  font-weight: 800;
-  font-style: normal;
+	margin: 0;
+	font-family: Arial, sans-serif;
 }
 
-h1 {
-  font-family: 'Muller ExtraBold DEMO', sans-serif;
-  font-size: 48px;
-  font-weight: 800;
-  color: #ffffff;
-}
-.container {
-    max-width: 800px;
-    margin: 0 auto;
+header {
+	background-color: #000000;
+	color: #fff;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	padding: 5px;
+	text-align: center;
   }
   
-  .image-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
+  header img {
+	max-height: 80px;
+  }
+
+
+
+nav {
+	background-color: #f2f2f2;
+	padding: 5px;
+	display: flex;
+	justify-content: flex-start;
+	align-items: center;
+}
+
+nav a {
+	color: #333;
+	text-decoration: none;
+	padding: 10px;
+	border-radius: 5px;
+	transition: background-color 0.3s ease;
+}
+
+nav a:hover {
+	background-color: none;
+	color:none;
+	text-decoration: underline;
+}
+
+main {
+	padding: 20px;
+}
+
+.product-grid {
+	display: grid;
+	grid-template-columns: repeat(4, 250px);
+	grid-gap: 20px;
+	margin-top: 50px;
+  }
+
+
+  
+
+.product-item {
+	background-color: #fff;
+	padding: 20px;
+	box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+}
+
+.product-image {
+	position: relative;
+	
+}
+
+.product-image img {
+	max-width: 100%;
+	height: auto;
+	object-fit: cover;
+	margin-bottom: 20px;
+	display: block;
+	width: 100%;
   }
   
-  img {
-    max-width: 40%;
-    height: auto;
-    margin: 0 20px;
+  .product-image img {
+	max-width: 100%;
+	height: auto;
+	object-fit: cover;
+	margin-bottom: 20px;
+	display: block;
+	width: 100%;
   }
   
-  .image-container figcaption{
-    display: inline-block;
-    vertical-align: top;
-    text-align: center;
-    margin-top: 30px;
-    width: 100%;
-    font-weight: bold;
-    font-size: larger;
-    
+  
+  
+
+.product-image img:last-child {
+	position: absolute;
+	top: 0;
+	left: 0;
+	opacity: 0;
+	transition: opacity 0.3s ease;
+}
+
+.product-image:hover img:last-child {
+	opacity: 1;
+}
+
+.product-item h3 {
+	font-size: 24px;
+	font-weight: bold;
+	margin: 0;
+	color: #333;
+	text-align: center;
+}
+
+.product-item p {
+	font-size: 18px;
+	margin: 0;
+	color: #333;
+	text-align: center;
+}
+
+.product-item .cta-button {
+	margin-top: 20px;
+	color: black;
+	padding: 10px 20px;
+	font-size: 16px;
+	font-weight: bold;
+	cursor: pointer;
+	
+	
+}
+
+.product-item .cta-button:hover {
+	
+	text-decoration: underline;
+}
+
+@media screen and (min-width: 768px) {
+	.product-grid {
+		grid-template-columns: repeat(4, 1fr); /* Set a maximum of 4 columns on larger screens */
+	}
+}
+/* for screens smaller than 576px */
+@media screen and (max-width: 575px) {
+	/* add styles here */
   }
-  /* CSS for the gallery link */
-.gallery-link {
-  text-align: center;
-  margin-top: 20px;
-}
-
-.gallery-link a {
-  display: inline-block;
-  padding: 10px 20px;
-  background-color: #000;
-  color: #fff;
-  text-decoration: none;
-  font-weight: bold;
-  font-size: xx-large;
-}
-
-.gallery-link a:hover {
-  background-color: #fff;
-  color: #000;
-}
-
- 
+  
+  /* for screens between 576px and 768px */
+  @media screen and (min-width: 576px) and (max-width: 767px) {
+	/* add styles here */
+  }
+  
+  /* for screens between 768px and 992px */
+  @media screen and (min-width: 768px) and (max-width: 991px) {
+	/* add styles here */
+  }
+  
+  /* for screens between 992px and 1200px */
+  @media screen and (min-width: 992px) and (max-width: 1199px) {
+	/* add styles here */
+  }
+  
+  /* for screens larger than 1200px */
+  @media screen and (min-width: 1200px) {
+	/* add styles here */
+  }
   
